--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-react": "^7.25.9",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
+    "dotenv": "^16.4.5",
     "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
