--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     },
     "setupFiles": [
       "<rootDir>/jest.setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!axios)/"
     ]
   },
   "eslintConfig": {
@@ -56,7 +59,6 @@
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "dotenv": "^16.4.5",
-    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
   }
